<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".EnterExpense">

    <TextView
        android:text="@string/enter_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="40sp"
        android:id="@+id/entr" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ff000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:hint="@string/cost_eg"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:hint="@string/description_eg"
        android:inputType="text" />

    <Button
        android:text="@string/save"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="10dp" />

</LinearLayout>
